added rules in example.html to simplify example.css

--- a/example.html
+++ b/example.html
@@ -23,8 +23,8 @@
 
             <div id="wrapper-main">
                 <main>
-                <article id="A1">
-                    <section id="A1-S1" class="F">
+                <article id="A1" class="BA3 MB20">
+                    <section id="A1-S1" class="F MB10">
                         <p>
                         <span class="REM075">Eminuit autem inter humilia supergressa iam impotentia fines mediocrium delictorum nefanda Clematii cuiusdam Alexandrini nobilis mors repentina; cuius socrus cum misceri sibi generum, flagrans eius amore, non impetraret, ut ferebatur, per palatii pseudothyrum introducta, oblato pretioso reginae monili id adsecuta est, ut ad Honoratum tum comitem orientis formula missa letali omnino scelere nullo contactus idem Clematius nec hiscere nec loqui permissus occideretur.</span><br>
                         <br>
@@ -33,7 +33,7 @@
                         <span class="REM275">Homines enim eruditos et sobrios ut infaustos et inutiles vitant, eo quoque accedente quod et nomenclatores adsueti haec et talia venditare, mercede accepta lucris quosdam et prandiis inserunt subditicios ignobiles et obscuros.</span><br>
                         </p>
                     </section>
-                    <section id="A1-S2" class="F">
+                    <section id="A1-S2" class="F MB10">
                         <p>
                         <span class="FWB">Eminuit autem inter humilia supergressa iam impotentia fines mediocrium delictorum nefanda Clematii cuiusdam Alexandrini nobilis mors repentina; cuius socrus cum misceri sibi generum, flagrans eius amore, non impetraret, ut ferebatur, per palatii pseudothyrum introducta, oblato pretioso reginae monili id adsecuta est, ut ad Honoratum tum comitem orientis formula missa letali omnino scelere nullo contactus idem Clematius nec hiscere nec loqui permissus occideretur.</span><br>
                         <br>
@@ -49,7 +49,7 @@
                         <span class="FVSC">Homines enim eruditos et sobrios ut infaustos et inutiles vitant, eo quoque accedente quod et nomenclatores adsueti haec et talia venditare, mercede accepta lucris quosdam et prandiis inserunt subditicios ignobiles et obscuros.</span><br>
                         </p>
                     </section>
-                    <section id="A1-S3" class="F">
+                    <section id="A1-S3" class="F MB10">
                         <p class="FFS">
                         Eminuit autem inter humilia supergressa iam impotentia fines mediocrium delictorum nefanda Clematii cuiusdam Alexandrini nobilis mors repentina; cuius socrus cum misceri sibi generum, flagrans eius amore, non impetraret, ut ferebatur, per palatii pseudothyrum introducta, oblato pretioso reginae monili id adsecuta est, ut ad Honoratum tum comitem orientis formula missa letali omnino scelere nullo contactus idem Clematius nec hiscere nec loqui permissus occideretur.<br>
                         <br>
@@ -72,7 +72,7 @@
                         Homines enim eruditos et sobrios ut infaustos et inutiles vitant, eo quoque accedente quod et nomenclatores adsueti haec et talia venditare, mercede accepta lucris quosdam et prandiis inserunt subditicios ignobiles et obscuros.<br>
                         </p>
                     </section>
-                    <section id="A1-S32" class="F">
+                    <section id="A1-S32" class="F MB10">
                         <p>
                         <span class="FCR">Eminuit autem inter humilia supergressa iam impotentia fines mediocrium delictorum nefanda Clematii cuiusdam Alexandrini nobilis mors repentina; cuius socrus cum misceri sibi generum, flagrans eius amore, non impetraret, ut ferebatur, per palatii pseudothyrum introducta, oblato pretioso reginae monili id adsecuta est, ut ad Honoratum tum comitem orientis formula missa letali omnino scelere nullo contactus idem Clematius nec hiscere nec loqui permissus occideretur.</span><br>
                         <br>
@@ -119,8 +119,8 @@
                         </p>
                     </section>
                 </article>
-                <article id="A2">
-                    <section id="A2-S1">
+                <article id="A2" class="BA3">
+                    <section id="A2-S1" class="MB10">
                         <img src="images/pbjt.gif" class="TL" />
                         <img src="images/pbjt.gif" class="T" />
                         <img src="images/pbjt.gif" class="TR" />
@@ -139,7 +139,7 @@
                         Homines enim eruditos et sobrios ut infaustos et inutiles vitant, eo quoque accedente quod et nomenclatores adsueti haec et talia venditare, mercede accepta lucris quosdam et prandiis inserunt subditicios ignobiles et obscuros.<br>
                         </p>
                     </section>
-                    <section id="A2-S2">
+                    <section id="A2-S2" class="MB10">
                         <img src="images/pbjt.gif" class="L" />
                         <img src="images/pbjt.gif" class="M" />
                         <img src="images/pbjt.gif" class="R" />
@@ -179,7 +179,7 @@
                     </section>
                 </article>
                 </main>
-                <aside>
+                <aside class="BA2">
                     <ul>
                         <li>
                             <figure>
