--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <h2>Règles de grid.css</h2>
                     <section>
                         <h3>Les positions</h3>
-                        <h4><span class="sans">Sans règle css</span><span class="avec">avec règle css</span></h4>
+                        <h4><span class="sans">Sans règle css</span><span class="avec">Avec règle css</span></h4>
                         <div class="rule-container">
                             <div class="rule-text">
                                 Règle css de positionement, elles se mettent en (position:absolute) et dépendent donc de leurs premier parent ayant la propriété (position:relative). Noms des class:
@@ -126,7 +126,7 @@
                     </section>
                     <section>
                         <h3>Le .RESIZEFROMUSER</h3>
-                        <h4><span class="sans">Sans règle css</span><span class="avec">avec règle css</span></h4>
+                        <h4><span class="sans">Sans règle css</span><span class="avec">Avec règle css</span></h4>
                         <div class="rule-container">
                             <div class="rule-text">
 .RESIZEFROMUSER, cette class permet de rendre l'objet au quel cete classe est atribué capable d'être modifié par l'utilisateur permettre entre autre de changer la taille d'une div, article, etc......
