--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     </section>
                     <section>
                         <h3>Titre</h3>
-                        <h4><span class="sans">sans règle css</span><span class="avec">avec règle css</span></h4>
+                        <h4><span class="sans">Sans règle css</span><span class="avec">Avec règle css</span></h4>
                         <div class="rule-container">
                             <div class="rule-text">
                                 Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci.
