ajout de plus de base

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                         <h4><span class="sans">Sans règle css</span><span class="avec">Avec règle css</span></h4>
                         <div class="rule-container">
                             <div class="rule-text">
-.RESIZEFROMUSER, cette class permet de rendre l'objet au quel cete classe est atribué capable d'être modifié par l'utilisateur permettre entre autre de changer la taille d'une div, article, etc......
+                                .RESIZEFROMUSER, cette class permet de rendre l'objet au quel cete classe est atribué capable d'être modifié par l'utilisateur permettre entre autre de changer la taille d'une div, article, etc......
                             </div>
                             <div class="rule-show">
                                 <div class="CUBE">
@@ -145,6 +145,62 @@
                     </section>
                     <section>
                         <h3>Titre</h3>
+                        <h4><span class="sans">Sans règle css</span><span class="avec">Avec règle css</span></h4>
+                        <div class="rule-container">
+                            <div class="rule-text">
+                                Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci.
+                            </div>
+                            <div class="rule-show">
+                                <div>
+                                    Lorem ipsum dolor sit amet, consectetuer adispicing elit.
+                                </div>
+                                <div class="">
+                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                                </div>
+                            </div>
+                        </div>
+                        <h4><span class="sans">Sans règle css</span><span class="avec">Avec règle css</span></h4>
+                        <div class="rule-container">
+                            <div class="rule-text">
+                                Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci.
+                            </div>
+                            <div class="rule-show">
+                                <div>
+                                    Lorem ipsum dolor sit amet, consectetuer adispicing elit.
+                                </div>
+                                <div class="">
+                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                                </div>
+                            </div>
+                        </div>
+                        <h4><span class="sans">Sans règle css</span><span class="avec">Avec règle css</span></h4>
+                        <div class="rule-container">
+                            <div class="rule-text">
+                                Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci.
+                            </div>
+                            <div class="rule-show">
+                                <div>
+                                    Lorem ipsum dolor sit amet, consectetuer adispicing elit.
+                                </div>
+                                <div class="">
+                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                                </div>
+                            </div>
+                        </div>
+                        <h4><span class="sans">Sans règle css</span><span class="avec">Avec règle css</span></h4>
+                        <div class="rule-container">
+                            <div class="rule-text">
+                                Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci.
+                            </div>
+                            <div class="rule-show">
+                                <div>
+                                    Lorem ipsum dolor sit amet, consectetuer adispicing elit.
+                                </div>
+                                <div class="">
+                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                                </div>
+                            </div>
+                        </div>
                         <h4><span class="sans">Sans règle css</span><span class="avec">Avec règle css</span></h4>
                         <div class="rule-container">
                             <div class="rule-text">
