ajout des exemple pour maxcontentsize

--- a/index.html
+++ b/index.html
@@ -145,20 +145,44 @@
                     </section>
                     <section>
                         <h3>Titre</h3>
-                        <h4><span class="sans">Sans règle css</span><span class="avec">Avec règle css</span></h4>
-                        <div class="rule-container">
+                        <div class="FLEX">
                             <div class="rule-text">
                                 Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci.
                             </div>
-                            <div class="rule-show">
-                                <div>
-                                    Lorem ipsum dolor sit amet, consectetuer adispicing elit.
+                            <div class="">
+                                <div class="ololbackground1 MAXCONTENTSIZE01">
+                                    je ne peut pas dépasser 10% de la largeur de mon parent.
                                 </div>
-                                <div class="">
-                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                                <div class="ololbackground1 MAXCONTENTSIZE02">
+                                    je ne peut pas dépasser 20% de la largeur de mon parent.
+                                </div>
+                                <div class="ololbackground1 MAXCONTENTSIZE03">
+                                    je ne peut pas dépasser 30% de la largeur de mon parent.
+                                </div>
+                                <div class="ololbackground1 MAXCONTENTSIZE04">
+                                    je ne peut pas dépasser 40% de la largeur de mon parent.
+                                </div>
+                                <div class="ololbackground1 MAXCONTENTSIZE05">
+                                    je ne peut pas dépasser 50% de la largeur de mon parent.
+                                </div>
+                                <div class="ololbackground1 MAXCONTENTSIZE06">
+                                    je ne peut pas dépasser 60% de la largeur de mon parent.
+                                </div>
+                                <div class="ololbackground1 MAXCONTENTSIZE07">
+                                    je ne peut pas dépasser 70% de la largeur de mon parent.
+                                </div>
+                                <div class="ololbackground1 MAXCONTENTSIZE08">
+                                    je ne peut pas dépasser 80% de la largeur de mon parent.
+                                </div>
+                                <div class="ololbackground1 MAXCONTENTSIZE09">
+                                    je ne peut pas dépasser 90% de la largeur de mon parent.
+                                </div>
+                                <div class="ololbackground1 MAXCONTENTSIZE1">
+                                    je ne peut pas dépasser 100% de la largeur de mon parent.
                                 </div>
                             </div>
                         </div>
+
                         <h4><span class="sans">Sans règle css</span><span class="avec">Avec règle css</span></h4>
                         <div class="rule-container">
                             <div class="rule-text">
