j'ai oublié la majuscule sur le J :)

--- a/index.html
+++ b/index.html
@@ -151,34 +151,34 @@
                             </div>
                             <div class="">
                                 <div class="ololbackground1 MAXCONTENTSIZE01">
-                                    je ne peut pas dépasser 10% de la largeur de mon parent.
+                                    Je ne peut pas dépasser 10% de la largeur de mon parent.
                                 </div>
                                 <div class="ololbackground1 MAXCONTENTSIZE02">
-                                    je ne peut pas dépasser 20% de la largeur de mon parent.
+                                    Je ne peut pas dépasser 20% de la largeur de mon parent.
                                 </div>
                                 <div class="ololbackground1 MAXCONTENTSIZE03">
-                                    je ne peut pas dépasser 30% de la largeur de mon parent.
+                                    Je ne peut pas dépasser 30% de la largeur de mon parent.
                                 </div>
                                 <div class="ololbackground1 MAXCONTENTSIZE04">
-                                    je ne peut pas dépasser 40% de la largeur de mon parent.
+                                    Je ne peut pas dépasser 40% de la largeur de mon parent.
                                 </div>
                                 <div class="ololbackground1 MAXCONTENTSIZE05">
-                                    je ne peut pas dépasser 50% de la largeur de mon parent.
+                                    Je ne peut pas dépasser 50% de la largeur de mon parent.
                                 </div>
                                 <div class="ololbackground1 MAXCONTENTSIZE06">
-                                    je ne peut pas dépasser 60% de la largeur de mon parent.
+                                    Je ne peut pas dépasser 60% de la largeur de mon parent.
                                 </div>
                                 <div class="ololbackground1 MAXCONTENTSIZE07">
-                                    je ne peut pas dépasser 70% de la largeur de mon parent.
+                                    Je ne peut pas dépasser 70% de la largeur de mon parent.
                                 </div>
                                 <div class="ololbackground1 MAXCONTENTSIZE08">
-                                    je ne peut pas dépasser 80% de la largeur de mon parent.
+                                    Je ne peut pas dépasser 80% de la largeur de mon parent.
                                 </div>
                                 <div class="ololbackground1 MAXCONTENTSIZE09">
-                                    je ne peut pas dépasser 90% de la largeur de mon parent.
+                                    Je ne peut pas dépasser 90% de la largeur de mon parent.
                                 </div>
                                 <div class="ololbackground1 MAXCONTENTSIZE1">
-                                    je ne peut pas dépasser 100% de la largeur de mon parent.
+                                    Je ne peut pas dépasser 100% de la largeur de mon parent.
                                 </div>
                             </div>
                         </div>
