changement du nom de la class maxcontentsize par maxcontentwidth car seul la width est changé pas la height

--- a/index.html
+++ b/index.html
@@ -144,40 +144,40 @@
                         </div>
                     </section>
                     <section>
-                        <h3>Titre</h3>
+                        <h3>Les .MAXCONTENTWIDTH</h3>
                         <div class="FLEX">
                             <div class="rule-text">
-                                Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci.
+                                cette class rend l'objet affecté incapable de dépasser une width
                             </div>
-                            <div class="">
-                                <div class="ololbackground1 MAXCONTENTSIZE01">
+                            <div class="ololbackground2">
+                                <div class="ololbackground1 MAXCONTENTWIDTH01">
                                     Je ne peut pas dépasser 10% de la largeur de mon parent.
                                 </div>
-                                <div class="ololbackground1 MAXCONTENTSIZE02">
+                                <div class="ololbackground1 MAXCONTENTWIDTH02">
                                     Je ne peut pas dépasser 20% de la largeur de mon parent.
                                 </div>
-                                <div class="ololbackground1 MAXCONTENTSIZE03">
+                                <div class="ololbackground1 MAXCONTENTWIDTH03">
                                     Je ne peut pas dépasser 30% de la largeur de mon parent.
                                 </div>
-                                <div class="ololbackground1 MAXCONTENTSIZE04">
+                                <div class="ololbackground1 MAXCONTENTWIDTH04">
                                     Je ne peut pas dépasser 40% de la largeur de mon parent.
                                 </div>
-                                <div class="ololbackground1 MAXCONTENTSIZE05">
+                                <div class="ololbackground1 MAXCONTENTWIDTH05">
                                     Je ne peut pas dépasser 50% de la largeur de mon parent.
                                 </div>
-                                <div class="ololbackground1 MAXCONTENTSIZE06">
+                                <div class="ololbackground1 MAXCONTENTWIDTH06">
                                     Je ne peut pas dépasser 60% de la largeur de mon parent.
                                 </div>
-                                <div class="ololbackground1 MAXCONTENTSIZE07">
+                                <div class="ololbackground1 MAXCONTENTWIDTH07">
                                     Je ne peut pas dépasser 70% de la largeur de mon parent.
                                 </div>
-                                <div class="ololbackground1 MAXCONTENTSIZE08">
+                                <div class="ololbackground1 MAXCONTENTWIDTH08">
                                     Je ne peut pas dépasser 80% de la largeur de mon parent.
                                 </div>
-                                <div class="ololbackground1 MAXCONTENTSIZE09">
+                                <div class="ololbackground1 MAXCONTENTWIDTH09">
                                     Je ne peut pas dépasser 90% de la largeur de mon parent.
                                 </div>
-                                <div class="ololbackground1 MAXCONTENTSIZE1">
+                                <div class="ololbackground1 MAXCONTENTWIDTH1">
                                     Je ne peut pas dépasser 100% de la largeur de mon parent.
                                 </div>
                             </div>
