ajout d'une explication

--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@
                         <h3>Les .MAXCONTENTWIDTH</h3>
                         <div class="FLEX">
                             <div class="rule-text">
-                                cette class rend l'objet affecté incapable de dépasser une width
+                                cette class rend l'objet affecté incapable de dépasser la largeur de son parent d'un facteur plus ou moins important en lui attribuant une max width.
                             </div>
-                            <div class="ololbackground2">
+                            <div class="ololbackground3">
                                 <div class="ololbackground1 MAXCONTENTWIDTH01">
                                     Je ne peut pas dépasser 10% de la largeur de mon parent.
                                 </div>
