--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                         <h3>Les .MAXCONTENTWIDTH</h3>
                         <div class="FLEX">
                             <div class="rule-text">
-                                cette class rend l'objet affecté incapable de dépasser la largeur de son parent d'un facteur plus ou moins important en lui attribuant une max width.
+                                Cette class rend l'objet affecté incapable de dépasser la largeur de son parent d'un facteur plus ou moins important en lui attribuant une max width.
                             </div>
                             <div class="ololbackground3">
                                 <div class="ololbackground1 MAXCONTENTWIDTH01">
