--- a/index.html
+++ b/index.html
@@ -183,6 +183,46 @@
                             </div>
                         </div>
                     </section>
+                    <section>
+                        <h3>Les .MAXCONTENTWIDTH</h3>
+                        <div class="FLEX">
+                            <div class="rule-text">
+                                Cette class rend l'objet affecté incapable de dépasser la largeur de son parent d'un facteur plus ou moins important en lui attribuant une max width.
+                            </div>
+                            <div class="ololbackground3">
+                                <div class="ololbackground1 MAXCONTENTHEIGHT01">
+                                    Je ne peut pas dépasser 10% de la hauteur de mon parent.
+                                </div>
+                                <div class="ololbackground1 MAXCONTENTHEIGHT02">
+                                    Je ne peut pas dépasser 20% de la hauteur de mon parent.
+                                </div>
+                                <div class="ololbackground1 MAXCONTENTHEIGHT03">
+                                    Je ne peut pas dépasser 30% de la hauteur de mon parent.
+                                </div>
+                                <div class="ololbackground1 MAXCONTENTHEIGHT04">
+                                    Je ne peut pas dépasser 40% de la hauteur de mon parent.
+                                </div>
+                                <div class="ololbackground1 MAXCONTENTHEIGHT05">
+                                    Je ne peut pas dépasser 50% de la hauteur de mon parent.
+                                </div>
+                                <div class="ololbackground1 MAXCONTENTHEIGHT06">
+                                    Je ne peut pas dépasser 60% de la hauteur de mon parent.
+                                </div>
+                                <div class="ololbackground1 MAXCONTENTHEIGHT07">
+                                    Je ne peut pas dépasser 70% de la hauteur de mon parent.
+                                </div>
+                                <div class="ololbackground1 MAXCONTENTHEIGHT08">
+                                    Je ne peut pas dépasser 80% de la hauteur de mon parent.
+                                </div>
+                                <div class="ololbackground1 MAXCONTENTHEIGHT09">
+                                    Je ne peut pas dépasser 90% de la hauteur de mon parent.
+                                </div>
+                                <div class="ololbackground1 MAXCONTENTHEIGHT1">
+                                    Je ne peut pas dépasser 100% de la hauteur de mon parent.
+                                </div>
+                            </div>
+                        </div>
+                    </section>
                 </article>
 
                 <article>
