éxplication plus précise sur le maxcontentheight et un moyen de fixé les problème d'affichage texte comme ça l'user sais comment faire ;p

--- a/index.html
+++ b/index.html
@@ -187,37 +187,37 @@
                         <h3>Les .MAXCONTENTWIDTH</h3>
                         <div class="FLEX">
                             <div class="rule-text">
-                                Cette class rend l'objet affecté incapable de dépasser la largeur de son parent d'un facteur plus ou moins important en lui attribuant une max width.
+                                Cette class rend l'objet affecté incapable de dépasser la largeur de son parent d'un facteur plus ou moins important en lui attribuant une max height. Cela peut causer dans certain cas des problème d'affichage nottament comme montré dans l'exemple le texte vient à sortir de son conteneur (car devenu trop petit pour le contenir) pour régler ce problème l'attribut overflow vous sera bien utile ;).
                             </div>
-                            <div class="ololbackground3">
-                                <div class="ololbackground1 MAXCONTENTHEIGHT01">
+                            <div class="BG1 FLEX">
+                                <div class="BG2 MAXCONTENTHEIGHT01">
                                     Je ne peut pas dépasser 10% de la hauteur de mon parent.
                                 </div>
-                                <div class="ololbackground1 MAXCONTENTHEIGHT02">
+                                <div class="BG2 MAXCONTENTHEIGHT02">
                                     Je ne peut pas dépasser 20% de la hauteur de mon parent.
                                 </div>
-                                <div class="ololbackground1 MAXCONTENTHEIGHT03">
+                                <div class="BG2 MAXCONTENTHEIGHT03">
                                     Je ne peut pas dépasser 30% de la hauteur de mon parent.
                                 </div>
-                                <div class="ololbackground1 MAXCONTENTHEIGHT04">
+                                <div class="BG2 MAXCONTENTHEIGHT04">
                                     Je ne peut pas dépasser 40% de la hauteur de mon parent.
                                 </div>
-                                <div class="ololbackground1 MAXCONTENTHEIGHT05">
+                                <div class="BG2 MAXCONTENTHEIGHT05">
                                     Je ne peut pas dépasser 50% de la hauteur de mon parent.
                                 </div>
-                                <div class="ololbackground1 MAXCONTENTHEIGHT06">
+                                <div class="BG2 MAXCONTENTHEIGHT06">
                                     Je ne peut pas dépasser 60% de la hauteur de mon parent.
                                 </div>
-                                <div class="ololbackground1 MAXCONTENTHEIGHT07">
+                                <div class="BG2 MAXCONTENTHEIGHT07">
                                     Je ne peut pas dépasser 70% de la hauteur de mon parent.
                                 </div>
-                                <div class="ololbackground1 MAXCONTENTHEIGHT08">
+                                <div class="BG2 MAXCONTENTHEIGHT08">
                                     Je ne peut pas dépasser 80% de la hauteur de mon parent.
                                 </div>
-                                <div class="ololbackground1 MAXCONTENTHEIGHT09">
+                                <div class="BG2 MAXCONTENTHEIGHT09">
                                     Je ne peut pas dépasser 90% de la hauteur de mon parent.
                                 </div>
-                                <div class="ololbackground1 MAXCONTENTHEIGHT1">
+                                <div class="BG2 MAXCONTENTHEIGHT1">
                                     Je ne peut pas dépasser 100% de la hauteur de mon parent.
                                 </div>
                             </div>
