--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                         </div>
                     </section>
                     <section>
-                        <h3>Les .MAXCONTENTWIDTH</h3>
+                        <h3>Les .MAXCONTENTHEIGHT</h3>
                         <div class="FLEX">
                             <div class="rule-text">
                                 Cette class rend l'objet affecté incapable de dépasser la largeur de son parent d'un facteur plus ou moins important en lui attribuant une max height. Cela peut causer dans certain cas des problème d'affichage nottament comme montré dans l'exemple le texte vient à sortir de son conteneur (car devenu trop petit pour le contenir) pour régler ce problème l'attribut overflow vous sera bien utile ;).
