ajout d'une table (FLIP TABLE AHHHHHHHHHHHHHHHHH)

--- a/index.html
+++ b/index.html
@@ -187,7 +187,8 @@
                         <h3>Les .MAXCONTENTHEIGHT</h3>
                         <div class="FLEX">
                             <div class="rule-text">
-                                Cette class rend l'objet affecté incapable de dépasser la largeur de son parent d'un facteur plus ou moins important en lui attribuant une max height. Cela peut causer dans certain cas des problème d'affichage nottament comme montré dans l'exemple le texte vient à sortir de son conteneur (car devenu trop petit pour le contenir) pour régler ce problème l'attribut overflow vous sera bien utile ;).
+                                Cette class rend l'objet affecté incapable de dépasser la largeur de son parent d'un facteur plus ou moins important en lui attribuant une max height. Cela peut causer dans certain cas des problème d'affichage nottament comme montré dans l'exemple le
+                                texte vient à sortir de son conteneur (car devenu trop petit pour le contenir) pour régler ce problème l'attribut overflow vous sera bien utile ;).
                             </div>
                             <div class="BG1 FLEX">
                                 <div class="BG2 MAXCONTENTHEIGHT01">
@@ -223,6 +224,139 @@
                             </div>
                         </div>
                     </section>
+
+                    <section>
+                        <h3>Les .MAXCONTENTHEIGHT</h3>
+                        <div class="FLEX">
+                            <div class="rule-text">
+                                Cette class rend l'objet affecté incapable de dépasser la largeur de son parent d'un facteur plus ou moins important en lui attribuant une max height. Cela peut causer dans certain cas des problème d'affichage nottament comme montré dans l'exemple le
+                                texte vient à sortir de son conteneur (car devenu trop petit pour le contenir) pour régler ce problème l'attribut overflow vous sera bien utile ;).
+                            </div>
+
+                            <div class="flextable">
+                                <div>lol
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                </div>
+                                <div>lol
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                </div>
+                                <div>lol
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                </div>
+                                <div>lol
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                </div>
+                                <div>lol
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                </div>
+                                <div>lol
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                </div>
+                                <div>lol
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                </div>
+                                <div>lol
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                </div>
+                                <div>lol
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                </div>
+                                <div>lol
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                    <div>lol</div>
+                                </div>
+                            </div>
+                    </section>
+
                 </article>
 
                 <article>
@@ -2186,18 +2320,18 @@
                     </section>
                 </article>
             </main>
-        </div>
+            </div>
 
-        <footer>
-            <h2>
+            <footer>
+                <h2>
                     <a href="example.html">
                         Example
                     </a>
                 </h2>
-        </footer>
-    </div>
+            </footer>
+        </div>
 
-    <!--
+        <!--
             <section>
             <h3>Titre</h3>
             <div class="rules-container">
